samples/_failures_safe/1761607108_3416a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b596cac.c: In function ‘main’:
./samples/SAFE/__tmp_0b596cac.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
